Feature/desenvolvimento l (#5)
* refactor: corrige estrutura do projeto

* config: configurar ambiente docker e atualizar dependências do projeto

* refactor: Ajusta docker compose:

- Remove comentários visando as boas práticas do clean code
- Ajusta identação e espaçamentos
- Corrije nomeclatura serviço para CamelCase

* refactor: Corrige conflitos pom.xml

* feat: Cria arquivo pra criação do banco de dados se não existir

* configurado Migration, utilizando Flyway, criado o arquivo V1__criar_tabela_usuarios.sql

* configurado Migration, utilizando Flyway, criado o arquivo V1__criar_tabela_jogador.sql

* feat: Cria cadastro de jogador, Valida Cadastro repetido.

* Criado teste da controller e service

* criado endpoint GET e o teste integrado

* criado endpoint delet juntamento com o teste de integração.

* criado endpoint delet POST para sortear jogadores fixos e visitantes, foi criado teste integrado

* Ajustes nas variaveis

* config sonarcloud analysis

* config sonarcloud analysis

* config sonarcloud analysis

* config sonarcloud analysis

---------

Co-authored-by: Danilo Azevedo <danilo.ann@gmail.com>
Co-authored-by: Danilo Azevedo <57817919+Daniloazevedo-dev@users.noreply.github.com>